--- a/SmartCheck/build.gradle
+++ b/SmartCheck/build.gradle
@@ -5,8 +5,6 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 26
 
-
-
     defaultConfig {
         applicationId "com.gane.smartcheck"
         minSdkVersion 22
@@ -38,4 +36,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation files('libs/platform_sdk_v2.4.0210.jar')
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+
 }
