--- a/SmartCheck/src/main/AndroidManifest.xml
+++ b/SmartCheck/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gane.smartcheck">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,13 +12,14 @@
         android:theme="@style/AppTheme" >
 
 
-        <activity android:name=".MainActivity" android:label="@string/app_name" android:screenOrientation="portrait">
+        <activity android:name=".LoginActivity" android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".MainActivity" android:label="@string/app_name" android:screenOrientation="portrait" />
+        <activity android:name=".QueryActivity" android:label="商品盘点" android:screenOrientation="portrait" />
         <activity android:name=".CheckActivity" android:screenOrientation="portrait" android:label="盘点" />
 
     </application>
