--- a/SmartCheck/build.gradle
+++ b/SmartCheck/build.gradle
@@ -38,5 +38,5 @@ dependencies {
     implementation files('libs/platform_sdk_v2.4.0210.jar')
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-
+    implementation 'com.android.support:design:26.1.0'
 }
