--- a/SmartCheck/src/main/AndroidManifest.xml
+++ b/SmartCheck/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".MainActivity" android:label="@string/app_name" android:screenOrientation="portrait" />
         <activity android:name=".QueryActivity" android:label="商品盘点" android:screenOrientation="portrait" />
         <activity android:name=".CheckActivity" android:screenOrientation="portrait" android:label="盘点" />
+        <activity android:name=".HistoryActivity" android:screenOrientation="portrait" android:label="盘点" />
 
     </application>
 </manifest>
