--- a/SmartCheck/src/main/AndroidManifest.xml
+++ b/SmartCheck/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -20,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" android:label="@string/app_name" android:screenOrientation="portrait" />
-        <activity android:name=".QueryActivity" android:label="商品盘点" android:screenOrientation="portrait" />
+        <activity android:name=".QueryActivity" android:label="商品查询" android:screenOrientation="portrait" />
         <activity android:name=".CheckActivity" android:screenOrientation="portrait" android:label="盘点" />
         <activity android:name=".HistoryActivity" android:screenOrientation="portrait" android:label="盘点" />
 
