--- a/SmartCheck/build.gradle
+++ b/SmartCheck/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
-
     defaultConfig {
         applicationId "com.gane.smartcheck"
         minSdkVersion 22
@@ -21,6 +20,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
