--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <activity android:name=".ui.main.MainActivity" android:label="@string/app_name" android:screenOrientation="portrait"/>
         <activity android:name=".ui.ScanDecoderActivity" android:label="@string/app_name" android:screenOrientation="portrait"/>
         <activity android:label="@string/sales_ticket" android:name=".ui.sales.SalesOrdersActivity" android:screenOrientation="portrait"/>
-        <activity android:label="@string/shop_manager" android:name=".ui.goods.GoodsActivity" android:screenOrientation="portrait"/>
+        <activity android:label="@string/shop_manager" android:name=".ui.goods.GoodsInfoActivity" android:screenOrientation="portrait"/>
         <activity android:label="@string/analyze" android:name=".ui.statistics.AnalyzeActivity" android:screenOrientation="portrait"/>
         <activity android:label="@string/add_goods" android:name=".ui.GoodsActionActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.billing.BillingActivity" android:label="@string/billing" android:screenOrientation="portrait"
